--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.5.2
+awsebcli==3.20.3
+botocore==1.23.54
+cement==2.8.2
 certifi==2022.6.15
-charset-normalizer==2.1.0
+charset-normalizer==2.0.12
+colorama==0.4.3
 coverage==6.4.2
 Django==4.0.6
 django-cors-headers==3.13.0
@@ -9,18 +13,27 @@ djangorestframework==3.13.1
 djangorestframework-api-key==2.2.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.2.0
+future==0.16.0
 idna==3.3
+jmespath==0.10.0
 lxml==4.9.1
 multitasking==0.0.11
 numpy==1.23.1
 pandas==1.4.3
 pandas-datareader==0.10.0
+pathspec==0.9.0
 PyJWT==2.1.0
+pypiwin32==223
 python-dateutil==2.8.2
 pytz==2022.1
-requests==2.28.1
-six==1.16.0
+pywin32==304
+PyYAML==5.4.1
+requests==2.26.0
+semantic-version==2.8.5
+six==1.14.0
 sqlparse==0.4.2
+termcolor==1.1.0
 tzdata==2022.1
 urllib3==1.26.10
+wcwidth==0.1.9
 yfinance==0.1.74
