--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,3 @@
 option_settings:
-    "aws:elasticbeanstalk:container:python":
+    aws:elasticbeanstalk:container:python:
       WSGIPath: core.wsgi.py
-    "aws:elasticbeanstalk:container:python:staticfiles":
-      /static/: "static/"
