--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ numpy==1.23.1
 pandas==1.4.3
 pandas-datareader==0.10.0
 pathspec==0.9.0
-PyJWT==1.7.1
+psycopg2==2.9.3
+PyJWT==2.1.0
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==5.4.1
