--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -4,5 +4,8 @@ container_commands:
     leader_only: true
 
   02_createsu:
-    command: "source /opt/python/run/venv/bin/activate && python iotd/manage.py createsu"
+    command: ".venv\Scripts\activate && py manage.py createsu"
     leader_only: true
+
+  03_collectstatic:
+    command: ".venv\Scripts\activate && py manage.py collectstatic --noinput"
