--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,11 +1,11 @@
 container_commands:
   01_migrate:
-    command: ".venv\Scripts\activate && py manage.py migrate --noinput"
+    command: "source .venv/bin/activate && py manage.py migrate --noinput"
     leader_only: true
 
   02_createsu:
-    command: ".venv\Scripts\activate && py manage.py createsu"
+    command: "source .venv/bin/activate && py manage.py createsu"
     leader_only: true
 
   03_collectstatic:
-    command: ".venv\Scripts\activate && py manage.py collectstatic --noinput"
+    command: "source .venv/bin/activate && py manage.py collectstatic --noinput"
