--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,11 +1,9 @@
 container_commands:
   01_migrate:
-    command: "source .venv/bin/activate && py manage.py migrate --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python finfetch/manage.py migrate --noinput"
     leader_only: true
-
   02_createsu:
-    command: "source .venv/bin/activate && py manage.py createsu"
+    command: "source /opt/python/run/venv/bin/activate && python finfetch/manage.py createsu"
     leader_only: true
-
   03_collectstatic:
-    command: "source .venv/bin/activate && py manage.py collectstatic --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python finfetch/manage.py collectstatic --noinput"
