--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,4 +1,6 @@
 container_commands:
-  01_migrate:
+  01_makemigrations:
+    command: "source /opt/python/run/venv/bin/activate && python3 manage.py makemigrations --noinput"
+  02_migrate:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate --noinput"
     leader_only: true
