--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,4 +1,4 @@
 container_commands:
   01_migrate:
-    command: 'source /opt/python/run/venv/bin/actiate && python finfetch/manage.py makemigrations'
-    command: 'source /opt/python/run/venv/bin/activate && python finfetch/manage.py migrate'
+    command: 'source /opt/python/run/venv/bin/actiate && python finfetch-api/manage.py makemigrations'
+    command: 'source /opt/python/run/venv/bin/activate && python finfetch-api/manage.py migrate'
