--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,4 +1,6 @@
 container_commands:
   01_migrate:
-    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py syncdb'
-    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py migrate'
+    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py syncdb  --noinput'
+    leader_only :true
+    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py migrate --noinput'
+    leader_only :true
