--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,5 +1,4 @@
 container_commands:
   01_migrate:
-    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py syncdb  --noinput'
-    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py migrate --noinput'
+    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py migrate --run-syncdb  --noinput'
     leader_only: true
