--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -1,4 +1,7 @@
 container_commands:
-  01_migrate:
+  01_makemigrations:
+    command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py makemigrations --noinput'
+    leader_only: true
+  02_migrate:
     command: 'source /opt/python/run/venv/bin/activate && python app-finfetch-api/manage.py migrate --noinput'
     leader_only: true
